<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>pl.arczynskiadam.notesmanager</groupId>
	<artifactId>NotesManager</artifactId>
	<packaging>war</packaging>
	<version>0.9</version>
	<description></description>
  
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
			</plugin>
			
			<plugin>
			    <groupId>com.mysema.maven</groupId>
			    <artifactId>maven-apt-plugin</artifactId>
			    <version>1.0.2</version>
			    <executions>
			        <execution>
			            <phase>generate-sources</phase>
			            <goals>
			                <goal>process</goal>
			            </goals>
			            <configuration>
			                <outputDirectory>target/generated-sources</outputDirectory>
			                <processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
			
			<plugin>
                <groupId>org.bsc.maven</groupId>
                <artifactId>maven-processor-plugin</artifactId>
                <version>2.0.6</version>
                <executions>
                    <execution>
                        <id>process</id>
                        <goals>
                            <goal>process</goal>
                        </goals>
                        <phase>generate-sources</phase>
                        <configuration>
                        	<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
                            <outputDirectory>target/generated-sources</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
			        <dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-jpamodelgen</artifactId>
						<version>5.0.0.Beta1</version>
					</dependency>
			    </dependencies>
            </plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.mysema.maven
										</groupId>
										<artifactId>
											maven-apt-plugin
										</artifactId>
										<versionRange>
											[1.0.2,)
										</versionRange>
										<goals>
											<goal>process</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
				                    <pluginExecutionFilter>
				                      <groupId>org.bsc.maven</groupId>
				                      <artifactId>maven-processor-plugin</artifactId>
				                      <versionRange>[2.0.6,)</versionRange>
				                      <goals>
				                        <goal>process</goal>
				                      </goals>
				                    </pluginExecutionFilter>
				                    <action>
				                      <ignore />
				                    </action>
				                  </pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
  
	<properties>
		<spring.version>4.1.4.RELEASE</spring.version>
		<spring.security.version>3.2.5.RELEASE</spring.security.version>
		<hibernate.version>4.3.8.Final</hibernate.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
  
	<dependencies>
		<!-- Java EE -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
	    </dependency>
		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp.jstl</groupId>
			<artifactId>jstl-api</artifactId>
			<version>1.2</version>
		</dependency>
    
    	<!-- Spring -->
	    <dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-beans</artifactId>
		    <version>${spring.version}</version>
	    </dependency>
    	<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-jdbc</artifactId>
		    <version>${spring.version}</version>
	    </dependency>
	    <dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-web</artifactId>
		    <version>${spring.version}</version>
	    </dependency>
	    <dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-webmvc</artifactId>
		    <version>${spring.version}</version>
	    </dependency>
	    <dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-orm</artifactId>
		    <version>${spring.version}</version>
	    </dependency>
	    
	    <!-- Jackson for Spring 4 -->
	    <dependency>
  			<groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.3.0</version>
		</dependency>
		 
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    <version>2.3.0</version>
		</dependency>
		
		<!-- Spring Data  -->
	    <dependency>
	        <groupId>org.springframework.data</groupId>
	        <artifactId>spring-data-jpa</artifactId>
	        <version>1.0.2.RELEASE</version>
	    </dependency>
	    
	    <!-- Spring Data JPA querydsl -->
	    <dependency>
		    <groupId>com.mysema.querydsl</groupId>
		    <artifactId>querydsl-core</artifactId>
		    <version>2.3.2</version>
		</dependency>
		 
		<dependency>
		    <groupId>com.mysema.querydsl</groupId>
		    <artifactId>querydsl-apt</artifactId>
		    <version>2.3.2</version>
		</dependency>
		
		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
 
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-taglibs</artifactId>
		    <version>${spring.security.version}</version>
		</dependency>
	    
	    <!-- Hibernate -->
	    <dependency>
	    	<groupId>org.hibernate</groupId>
	    	<artifactId>hibernate-entitymanager</artifactId>
	    	<version>${hibernate.version}</version>
	    </dependency>
	    <dependency>
	    	<groupId>org.hibernate</groupId>
	    	<artifactId>hibernate-core</artifactId>
	    	<version>${hibernate.version}</version>
	    </dependency>
	    <dependency>
			<groupId>org.hibernate.common</groupId>
			<artifactId>hibernate-commons-annotations</artifactId>
			<version>4.0.4.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.1-api</artifactId>
			<version>1.0.0.Final</version>
		</dependency>
		<!-- required for Hibernate4 -->
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>
		<!-- Hibernate Validator -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>4.3.2.Final</version>
		</dependency>
	
		<!-- SQL -->
		<dependency>
	    	<groupId>mysql</groupId>
	    	<artifactId>mysql-connector-java</artifactId>
	    	<version>5.1.10</version>
	    </dependency>
	    <dependency>
	    	<groupId>commons-dbcp</groupId>
	    	<artifactId>commons-dbcp</artifactId>
	    	<version>20030825.184428</version>
	    </dependency>
	    <dependency>
	    	<groupId>commons-pool</groupId>
	    	<artifactId>commons-pool</artifactId>
	    	<version>20030825.183949</version>
	    </dependency>
	    
	    <!-- Guava -->
	    <dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>18.0</version>
		</dependency>
	    
	    <!-- others -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.2</version>
		</dependency>
		
		<!-- Logging -->
	    <dependency>
	    	<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.1</version>
		</dependency>
	</dependencies>
</project>